--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
   		<version>1.2</version>
   	</dependency>
   	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.37</version>
+	</dependency>
+	<dependency>
+		<groupId>com.oracle</groupId>
+		<artifactId>ojdbc6</artifactId>
+		<version>11.2.0</version>
+	</dependency>
+  	<dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-webmvc</artifactId>
   		<version>4.2.2.RELEASE</version>
@@ -68,7 +78,8 @@
 		<artifactId>mybatis-spring</artifactId>
 		<version>1.2.3</version>
 	</dependency>
-  	
-  	
+
+
+	
   </dependencies>
 </project>
