--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 		<artifactId>mybatis-spring</artifactId>
 		<version>1.2.3</version>
 	</dependency>
+	<dependency>
+		<groupId>org.aspectj</groupId>
+		<artifactId>aspectjweaver</artifactId>
+		<version>1.8.7</version>
+	</dependency>
+		
 
 
 	
