--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
   <groupId>com.hybrid</groupId>
   <artifactId>Employee</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
   
   <properties>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
@@ -23,6 +24,17 @@
   	</plugins>
   </build>
   <dependencies>
+  	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>javax.servlet-api</artifactId>
+		<version>3.1.0</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>jstl</artifactId>
+		<version>1.2</version>
+	</dependency>
   	<dependency>
   		<groupId>org.apache.logging.log4j</groupId>
   		<artifactId>log4j-api</artifactId>
@@ -47,11 +59,13 @@
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
 		<version>5.1.37</version>
-	</dependency>
+		<scope>runtime</scope>
+  	</dependency>
 	<dependency>
 		<groupId>com.oracle</groupId>
 		<artifactId>ojdbc6</artifactId>
 		<version>11.2.0</version>
+		<scope>runtime</scope>
 	</dependency>
   	<dependency>
   		<groupId>org.springframework</groupId>
@@ -83,9 +97,7 @@
 		<artifactId>aspectjweaver</artifactId>
 		<version>1.8.7</version>
 	</dependency>
-		
 
-
-	
   </dependencies>
+
 </project>
