--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 		<scope>provided</scope>
 	</dependency>
 	<dependency>
+		<groupId>javax.servlet.jsp</groupId>
+		<artifactId>javax.servlet.jsp-api</artifactId>
+		<version>2.3.1</version>
+	</dependency>
+	<dependency>
 		<groupId>javax.servlet</groupId>
 		<artifactId>jstl</artifactId>
 		<version>1.2</version>
