--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
 		<artifactId>sitemesh</artifactId>
 		<version>3.0.1</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-oxm</artifactId>
+		<version>4.2.3.RELEASE</version>
+	</dependency>
 
   </dependencies>
 
