--- a/src/main/webapp/WEB-INF/package.json
+++ b/src/main/webapp/WEB-INF/package.json
@@ -15,6 +15,7 @@
     "angular-route": "^1.4.8",
     "angular-touch": "^1.4.8",
     "bootstrap": "^3.3.5",
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "ngmap": "^1.15.3"
   }
 }
