--- a/pom.xml
+++ b/pom.xml
@@ -66,12 +66,12 @@
 		<version>5.1.37</version>
 		<scope>runtime</scope>
   	</dependency>
-	<dependency>
-		<groupId>com.oracle</groupId>
-		<artifactId>ojdbc6</artifactId>
-		<version>11.2.0</version>
-		<scope>runtime</scope>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 		<groupId>com.oracle</groupId> -->
+<!-- 		<artifactId>ojdbc6</artifactId> -->
+<!-- 		<version>11.2.0</version> -->
+<!-- 		<scope>runtime</scope> -->
+<!-- 	</dependency> -->
   	<dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-webmvc</artifactId>
